Daslevanian Flavour Events

--- a/localisation/TD_01_flavour_daslevania_l_english.yml
+++ b/localisation/TD_01_flavour_daslevania_l_english.yml
@@ -82,3 +82,12 @@
  daslevania.2.b: "Chalian Prince"
  daslevania.2.c: "Wedlan Prince"
  daslevania.2.d: "Maybe Kurtensky isn't that bad of an option."
+ daslevania.3.t: "Zlatodvori Silk"
+ daslevania.3.desc: "Our merchants have successfully brought the methods of silk production from the south, it is time for it to flourish in Zlatodvor alongside golden Cloth!"
+ daslevania.3.a: "Wonderful News"
+ daslevania.4.t: "Poladne Vino"
+ daslevania.4.desc: "Our Winemakers from Poladna Kraina have managed to brew some outstanding wine, taste which rivals that of the finest breweries of the west!"
+ daslevania.4.a: "Vino? Cheers!"
+ daslevania.5.t: "Nikifor z Granilesu"
+ daslevania.5.desc: "Nikifor z Granilesu has offered his service at our court, we should find him a place as swiftly as possible to ensure continued prestige for our court!"
+ daslevania.5.a: "Welcome Nikifor into our Court"
