--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -64,6 +64,10 @@
  palmisianism_religion_desc: "During Liemarian Reformation one of the schools gained relevancy and became one of most influencial movements in Liemarianism. Beliving that emperors moved too far from Sal's original teachings and returning to them is the only way to salvation. But with time and further centralistion of power in Episcopate more radical members of Palmisianism started to slowly distance themselves from entire Reformation movement. In the end entire movement decided to leave Liemarianism and spread their faith themselves. Since then movement radicalised into believing that only Sal and his legitimate could function as religious icons, with some believing that it is only Sal that could represent God."
  chapterists: "Chapterists"
 
+ sacellist: "Sacellist"
+ sacellist_religion_desc: ""
+ maranist: "Maranist"
+
 
 
 
