--- a/localisation/TD_01_flavour_palmisianism_l_english.yml
+++ b/localisation/TD_01_flavour_palmisianism_l_english.yml
@@ -46,3 +46,37 @@
  palmisianism_sacred_ruler: "Sacred Ruler"
  palmisian_landed_chapters_modifier: "Landed Chapter"
  palmisianism_pragmatic_vassal: "Pragmatic Vassal"
+
+ palmisian.1.t: "Palmisian Missionaries" 
+ palmisian.1.desc: "We are getting Palmisian missionaries from one of our neighbors. As they disturb local peace with their work, we must decide what to do with them."
+ palmisian.1.a: "Allow them to be"
+ palmisian.1.b: "Banish Them"
+ palmisian_missionaries_expelled: "Palmisian Missionaries Expelled"
+
+ palmisian.2.t: "Ruler Uses Chapterist Knowledge"
+ palmisian.2.desc: "Due to our positive relations with Palmisian Chapters inside our country, we were allowed to use their gathered knowledge to advance our education."
+ palmisian.2.a: "Future Awaits"
+
+ palmisian.3.t: "Localised Festivals"
+ palmisian.3.desc: "Our citizens are celebrating their own festivals in local communities."
+ palmisian.3.a: "United as One"
+ palmisianism_local_festivals: "Local Festivals"
+
+ palmisian.4.t: "Talented Advisor"
+ palmisian.4.desc: "We were sent one of the promising candidates for the Chapter, they are supposed to work as our advisor as it was deemed that people of their talent would be wasted."
+ palmisian.4.a: "Wonderful"
+
+ palmisian.5.t: "Holy War"
+ palmisian.5.desc: "The chapters decided that heretics and saracens beyond our borders had it easy for too long, we must fight them like Sal fought them during his days."
+ palmisian.5.a: "To War!"
+ palmisianism_holy_war_declared: "Holy War Declared"
+
+ palmisian.6.t: "Voice of Reason"
+ palmisian.6.desc: "Many brothers inside chapters see our cause as the rightous one, because of that they started to lobby their own leaders to see us in more positive light."
+ palmisian.6.a: "Continue our Endeavours"
+
+ palmisian.7.t: "Share Knowledge"
+ palmisian.7.desc: "We decided to share what we know to our brothers, because of that they decided to also help us in scientific progress"
+ palmisian.7.a: "Work Together"
+ palmisianism_knowledge_cooperative: "Knowledge Cooperative"
+ 
