--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -124,4 +124,4 @@
  maduni_tradenode: "Maduni"
  mafid_tradenode: "Mafid"
  zakarturia_tradenode: "Mshivar"
- eamenos_tradenode: "Eamenos"
+ eamenos_tradenode: "Virinos"
