Missing Zakarturi prov names

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1380,17 +1380,17 @@
  PROV1379: "Minastar"
  PROV1380: "Staq"
  PROV1381: "Saaniwt"
- PROV1382: ""
+ PROV1382: "Tomara"
  PROV1383: "Qupan"
  PROV1384: "Xazir"
  PROV1385: "Hnatmen"
  PROV1386: "Shavisan"
  PROV1387: "Xanemat"
  PROV1388: "Chewaluyan Coast"
- PROV1389: ""
+ PROV1389: "Talaxia"
  PROV1390: "Shuhtran"
  PROV1391: "Mglebiteke"
- PROV1392: ""
+ PROV1392: "Dineba"
  PROV1393: "Gulf of Maqlan"
  PROV1394: "Smawqar"
  PROV1395: "Haqwasi"
@@ -1724,7 +1724,7 @@
  PROV1723: "Western Qarbali Sea"
  PROV1724: "Fiddan Coast"
  PROV1725: "Tsekhlikha"
- PROV1726: ""
+ PROV1726: "Rkeina"
  PROV1727: "Gartadzar"
  PROV1728: "Kranchark"
  PROV1729: "Etzar"
@@ -1742,7 +1742,7 @@
  PROV1741: ""
  PROV1742: "Radoriasan Bay"
  PROV1743: "Secenan Coast"
- PROV1744: ""
+ PROV1744: "Nisla"
  PROV1745: "Sygyary"
  PROV1746: ""
  PROV1747: "Cadeilhasi Coast"
