--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -221,7 +221,7 @@
  PROV220: "Zawarmahz"
  PROV221: "Gulf of Marstonia"
  PROV222: "Rahala"
- PROV223: ""
+ PROV223: "Naxar"
  PROV224: "Helasam"
  PROV225: "Bagdur"
  PROV226: "Mõgõr"
@@ -308,8 +308,8 @@
  PROV307: "Linnutee"
  PROV308: "Geniborovka"
  PROV309: "Visobrezhe"
- PROV310: ""
- PROV311: ""
+ PROV310: "Samtuqa"
+ PROV311: "Thredtuqa"
  PROV312: "Gyruzygety"
  PROV313: "Hurkhzan"
  PROV314: "Karisar"
@@ -317,7 +317,7 @@
  PROV316: "Charnigora"
  PROV317: "Bukutyer"
  PROV318: "Poleshits"
- PROV319: ""
+ PROV319: "Yintuga"
  PROV320: "Alemetsa"
  PROV321: "Oslugor"
  PROV322: "Southern Gandari Sea"
@@ -347,7 +347,7 @@
  PROV346: "Hercogaosta"
  PROV347: "Eberland Bay"
  PROV348: "Sena Egle"
- PROV349: ""
+ PROV349: "Khaxlua"
  PROV350: "Vaviejas"
  PROV351: "Pušyneliai"
  PROV352: "Guolliborrat"
@@ -397,7 +397,7 @@
  PROV396: "Raçinard"
  PROV397: "Vejosiai"
  PROV398: "Tauragiris"
- PROV399: ""
+ PROV399: "Qanno"
  PROV400: "Forsi"
  PROV401: "Mezonian Straits"
  PROV402: "Zyntar"
@@ -882,7 +882,7 @@
  PROV881: "Laverie"
  PROV882: "Eklidian Sea"
  PROV883: "Ceridolie"
- PROV884: ""
+ PROV884: "Tela"
  PROV885: "Ronicine"
  PROV886: "Fionella"
  PROV887: "Palisollia"
@@ -1178,7 +1178,7 @@
  PROV1177: "Vazhakal"
  PROV1178: "Sikhraval"
  PROV1179: "Apategan Sea"
- PROV1180: ""
+ PROV1180: "Rety"
  PROV1181: "Mshivar"
  PROV1182: "Bakayyl"
  PROV1183: "Gyakir"
@@ -1739,14 +1739,14 @@
  PROV1738: "Holsyak"
  PROV1739: "Osmalig"
  PROV1740: "Taratsikhe"
- PROV1741: ""
+ PROV1741: "Ltewnu"
  PROV1742: "Radoriasan Bay"
  PROV1743: "Secenan Coast"
  PROV1744: "Nisla"
  PROV1745: "Sygyary"
- PROV1746: ""
+ PROV1746: "Hegatar"
  PROV1747: "Cadeilhasi Coast"
- PROV1748: ""
+ PROV1748: "Tshava"
  PROV1749: "Gyzyler"
  PROV1750: "Gkylyl"
  PROV1751: "Kemacyli"
