--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -909,7 +909,7 @@
  PROV908: "Ozivinna"
  PROV909: "Meitiesa"
  PROV910: "Ehtywiran Coast"
- PROV911: ""
+ PROV911: "Shotan"
  PROV912: "Dugaaniboai"
  PROV913: "Castima"
  PROV914: "Zeretinne"
@@ -1273,7 +1273,7 @@
  PROV1272: "Fozayt"
  PROV1273: "Farnak"
  PROV1274: "Kataruz"
- PROV1275: ""
+ PROV1275: "Chrasis"
  PROV1276: "Kurkutal"
  PROV1277: "Nirqad"
  PROV1278: "Virinos"
@@ -4938,7 +4938,7 @@
  PROV4937: "Razhigora"
  PROV4938: "Pivkovo"
  PROV4939: "Graniles"
- PROV4940: "4940"
+ PROV4940: "Zadar"
  PROV4941: "Bagrovigai"
  PROV4942: "Visoka"
  PROV4943: "Tetri K'ilde"
