--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -65,7 +65,7 @@
  chapterists: "Chapterists"
 
  sacellist: "Sacellist"
- sacellist_religion_desc: ""
+ sacellist_religion_desc: "During the twelveth century, there was a major discourse related to the tolerance and inclusion of certain heathenous and pagan beliefs in the Saelian church. After countless debates and synods, it was decided by emperor and the tetrarchy to new core tenets, such as always calling God the same name regardless of rite, prohibition of human and animal sacrifice, ban on all types of concubinates, and new limitations on angelic cults. Many groups were opposing the new doctrines, however those close to the heart of the empire were quickly eradicated thanks to the powerful at a time inquisition.\n\nAs of the fifteenth century, the only eastern Sigilianism (also known as vetustans and sacellists) remain in Kakigia. While the specific beliefs of groups in Morvania, Puraidemaa and Vorracia differ, they still maintain contact and dialogue with each other."
  maranist: "Maranist"
 
 
