--- a/localisation/TD_01_flavour_bunelisuli_l_english.yml
+++ b/localisation/TD_01_flavour_bunelisuli_l_english.yml
@@ -5,6 +5,7 @@
  bunelisuli_empire_reform_desc: "Quick spread of information and suppression of any threat are major pillars of Bunelisuli government."
  bunelisuli_empire_decision_title: "Restore our Empire"
  bunelisuli_empire_decision_desc: "Fall of Bunelisuli Empire in 1432 plunged us into many years of infighting. Now we can restore our glory!"
+ mechanic_upgraded_steppe_nomads_mechanic_yes: "Tribal Loyalty gives additional bonuses."
 
  khumaarati_tribe_reform: "Khumaarati Tribe"
  khumaarati_tribe_reform_desc: "Khumaarati tribes have maintained a close relations with Bunelisuli states."
