--- a/localisation/TD_01_flavour_kakigia_l_english.yml
+++ b/localisation/TD_01_flavour_kakigia_l_english.yml
@@ -76,7 +76,7 @@
  SAME_RELIGION_E: "Same Religion"
  AI_E: "Is an Artificial Intelligence"
  
- ability_steppe_nomads_mechanic: "Kakigian Horde Mechanic"
+ ability_steppe_nomads_mechanic: "Horde Management"
  tribal_loyalty_power: "Tribal Loyalty"
  tribal_loyalty_power_desc: "Tribal Loyalty represents how much trust tribes put in the [Root.Monarch.GetTitle].\n§YIncreased by:§!\n-having high ruler military skill\n-winning wars\n-having high power projection\n-having high horde unity\n-having high prestige\n-having specific ruler personalities\n§YDecreased by:§!\n-having low ruler military skill\n-using government interactions\n-losing wars"
  monthly_tribal_loyalty_power: "Monthly Tribal Loyalty"
