--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4968,8 +4968,8 @@
  PROV4967: "Leihus"
  PROV4968: "Isenforst"
  PROV4969: "Refeld"
- PROV4970: "4970"
- PROV4971: "4971"
+ PROV4970: "Incedians"
+ PROV4971: "Incedians"
  PROV4972: "4972"
  PROV4973: "4973"
  PROV4974: "4974"
