--- a/localisation/TD_rebels_l_english.yml
+++ b/localisation/TD_rebels_l_english.yml
@@ -49,5 +49,5 @@
  dejilobi_rebels_name: "Dejilobi Rebels"
  tamgarani_rebels_name: "Tamgarani Rebels"
  jambakan_pantheons_rebels_name: "Jambakan Pantheons Rebels"
- palmisianism_rebels: "Palmisianism Rebels"
- sacellist_rebels: "Sacellist Rebels"
+ palmisianism_rebels_name: "Palmisianism Rebels"
+ sacellist_rebels_name: "Sacellist Rebels"
