Saryana and subjects flavour

--- a/localisation/TD_01_flavour_samadia_l_english.yml
+++ b/localisation/TD_01_flavour_samadia_l_english.yml
@@ -77,3 +77,19 @@
  paraderavi_protector_of_samadia_desc: "Idea of a protector state is not really new, as there ancient Tehnibake and Paredeshian states protecting lesser nations from outside raids, but only in the last five centuries it evolved into the idea it is today, with us guiding not only political state of the region, but also culture, religion, military and ideology. Surely someday we will be overtaken, but have to ensure that our reign will be as long and as gold as it can be."
  paraderavi_new_methods_of_warfare: "New Methods of Warfare"
  paraderavi_new_methods_of_warfare_desc: "Nomadic raids of the eleventh and twelveth century have led to increased need of finding a way to effectively combat these horsemen. This is when Danase pikemen were finally given the chance to shine. In the following years, their formations became the default way of fighting in the empire, and consequently in the rest of Samadia. With the advancements of the gunpowder technology in seventeenth century, they were made even stronger, being able to not only perfectly defend, but also systematically attack."
+ 
+ 
+ apagtaru_kingdom_reform: "Apagtaru Kingdom"
+ apagtaru_kingdom_reform_desc: "Apagtaru Kingdom is most prestigious governing body in Apagtaru lands, and it commands all of the Apagtaru people in the will of Gods. It is heavily anti-burghers due to it's long history."
+ 
+ apagtaru_march_reform: "Apagtaru March"
+ apagtaru_march_reform_desc: "Apagtaru March is a subject of Apagtaru Kingdom that was established on the southern border of the Apagtaru realm."
+ 
+ apagtaru_aranya_march_reform: "Aranya March"
+ apagtaru_aranya_march_reform_desc: "Aranya March is a special Apagtaru March established by Aranya dynasty, and it's mission is to colonize the eastern forests."
+ mechanic_can_siberian_colonize_in_pasmangala_yes: "Can Establish Colonial Frontiers Only in Pasmangala Region."
+ TD_Sindalabi_Frontiers: "Sindalabi Frontiers"
+ saryana.1.t: "Future of Aranya March"
+ saryana.1.desc: "Aranya March has been established with colonization of eastern forests in mind, but the question stands, do we want to continue with the plan, or abandon it?"
+ saryana.1.a: "Continue the Operations"
+ saryana.1.b: "It is pointless, annex the Sindalabi"
