--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4924,7 +4924,7 @@
  PROV4923: "Nadwodno"
  PROV4924: "Rzeczycow"
  PROV4925: "Svirava"
- PROV4926: "4926"
+ PROV4926: "Tuchvgola"
  PROV4927: "Dagraag"
  PROV4928: "Nagios"
  PROV4929: "Goroles"
