--- a/localisation/TD_01_flavour_samadia_l_english.yml
+++ b/localisation/TD_01_flavour_samadia_l_english.yml
@@ -94,3 +94,9 @@
  saryana.1.a: "Restore their March Status"
  saryana.1.b: "It is pointless, annex the Sindalabi"
  saryana.1.tt: "We will decide if we want to annex Sindalabi, or restore their March Status and continue the forest colonization operations."
+ 
+ pakapujarirajya_reform: "Pakapujarirajya"
+ pakapujarirajya_reform_desc: "Pakapujarirajya is a government where the king is the leader of Desjaniti religion, and is considered either God, or that was sent by Gods."
+ PAKAPUJARIRAJYA: "Pakapujarirajya"
+ SARVOCCAPAKAPUJARI: "Sarvoccapakapujari"
+ estate_pakapujari: "Pakapujari"
