--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -75,7 +75,7 @@
  PROV_ADJ74: "Ridyahan"
  PROV_ADJ75: "Rizqal"
  PROV_ADJ76: "Qafqumir"
- PROV_ADJ77: "SAHILA"
+ PROV_ADJ77: "77"
  PROV_ADJ78: "Marjanid"
  PROV_ADJ79: "Arrecan"
  PROV_ADJ80: "Desanaux"
