--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -75,7 +75,7 @@
  PROV74: "Ridyahan"
  PROV75: "Rizqal"
  PROV76: "Qafqumir"
- PROV77: "SAHILA"
+ PROV77: "77"
  PROV78: "Marjanid"
  PROV79: "Arrecan"
  PROV80: "Desanaux"
