--- a/localisation/TD_bookmarks_l_english.yml
+++ b/localisation/TD_bookmarks_l_english.yml
@@ -22,3 +22,6 @@
 
  TAEDIUM_HENGTUA_BOOKMARK_TITLE: "£lobby_list_entry_8£"
  TAEDIUM_HENGTUA_BOOKMARK_DESC: ""
+
+ TAEDIUM_SAHILA_BOOKMARK_TITLE: "£lobby_list_entry_9£"
+ TAEDIUM_SAHILA_BOOKMARK_DESC: ""
