--- a/localisation/TD_rebels_l_english.yml
+++ b/localisation/TD_rebels_l_english.yml
@@ -51,3 +51,4 @@
  jambakan_pantheons_rebels_name: "Jambakan Pantheons Rebels"
  palmisianism_rebels_name: "Palmisianism Rebels"
  sacellist_rebels_name: "Sacellist Rebels"
+ midnima_rebels_name: "Midnima Rebels"
