--- a/localisation/domination_l_english.yml
+++ b/localisation/domination_l_english.yml
@@ -2510,7 +2510,7 @@
  mechanic_free_expansionist_zealotry_yes: "The '§YExpansionist Zealotry§!' estate privilege has no longer any drawback at peace and does no longer decrease max absolutism"
  estate_church_for_the_faith_effect_tooltip_a: "Morale of Armies: §G+5%§! when at war with heretics or heathens."
  mechanic_recruiting_generals_increases_church_loyalty_yes: "Recruiting Generals increases loyalty of the §YClergy§! by §G2%§!"
- mechanic_seizing_land_no_rebels_from_estate_maratha_yes: "Seizing Land from the §YMarathas§! does not trigger Marathi rebels"
+ mechanic_seizing_land_no_rebels_from_estate_maratha_yes: "Seizing Land from the §YApastras§! does not trigger Apastri rebels"
  mechanic_need_crownland_to_annex_yes: "Can only annex subjects while having at least §Y50%§! Crown Land"
  mechanic_nobility_loyalty_hit_on_integration_yes: "Diplomatic Annexations reduce the loyalty of the Nobility by §R20.0%§!"
  mechanic_has_limited_terms_yes: "Rulers have limited terms"
@@ -3865,20 +3865,20 @@
  estate_nobles_expedition_rights: "[Root.GetNobilityName] Expedition Rights"
  estate_nobles_expedition_rights_desc: "The New World offers many opportunities - and our [Root.GetNobilityName] is well aware of it. By granting them the right to start their own expedition in the New World without having to worry about their worldly possessions in the homeland, we will be able to recruit the bravest conquistadors known to man."
  ####MARATHA PRIVILEGES###
- estate_maratha_development_of_marathi_lands: "Promote Marathi Development"
+ estate_maratha_development_of_marathi_lands: "Promote Apastri Development"
  estate_maratha_development_of_marathi_lands_desc: "The [Root.GetMarathasName] are one of the influential castes within our [Root.GovernmentName]. Promising them the attention and resources of the state will ensure their loyalty towards us."
  estate_maratha_development_of_marathi_lands_gt: "Every owned §YSinhalese§!, §YDravidian§! and §YWestern Aryan§! (which is NOT Rajasthani or Malvi) province gains the following bonus:"
  estate_maratha_development_of_marathi_lands_rt: "The modifier '§YMarathi Development§!' is removed from all provinces."
- estate_maratha_development_of_marathi_lands_mod: "Marathi Development"
- desc_estate_maratha_development_of_marathi_lands_mod: "This province receives great support from the Marathi regarding its development."
- estate_maratha_military_ministerium: "Grant [Root.GetMarathasName] Minister Right"
- estate_maratha_military_ministerium_desc: "The [Root.GetMarathasName] are a warrior caste and as such possess many military capable strategists. Allowing the [Root.GetMarathasName] a guaranteed position at our court gives us an easy access to their most proficient advisors."
+ estate_maratha_development_of_marathi_lands_mod: "Apastri Development"
+ desc_estate_maratha_development_of_marathi_lands_mod: "This province receives great support from the Apastri regarding its development."
+ estate_maratha_military_ministerium: "Grant Apastras Minister Right"
+ estate_maratha_military_ministerium_desc: "The Apastras are a warrior caste and as such possess many military capable strategists. Allowing the Apastras a guaranteed position at our court gives us an easy access to their most proficient advisors."
  estate_maratha_royal_court_tasks: "Grant Court Positions"
- estate_maratha_royal_court_tasks_desc: "The royal court is a complex institution in its own right. In order to manage it with less effort, members of the [Root.GetMarathasName] are invited to fill some positions of the court for their [Root.Monarch.GetTitle]."
- estate_maratha_force_conscription: "[Root.GetMarathasName] Conscription"
- estate_maratha_force_conscription_desc: "In times of need, the [Root.Monarch.GetTitle] can enlist all capable members of the [Root.GetMarathasName] in order to fight for the [Root.GovernmentName]. This, of course, comes at the cost of additional privileges for the [Root.GetMarathasName]."
- estate_maratha_noble_promotion: "[Root.GetMarathasName] Noble Promotion"
- estate_maratha_noble_promotion_desc: "[Root.GetMarathasName] have members of noble blood themselves. However, in direct competition with the normal [Root.GetNobilityOrFallbackName] the [Root.GetMarathasName] have the disadvantage. Promoting their position will secure the loyalty of the [Root.GetMarathasName]."
+ estate_maratha_royal_court_tasks_desc: "The royal court is a complex institution in its own right. In order to manage it with less effort, members of the Apastras are invited to fill some positions of the court for their [Root.Monarch.GetTitle]."
+ estate_maratha_force_conscription: "Apastras Conscription"
+ estate_maratha_force_conscription_desc: "In times of need, the [Root.Monarch.GetTitle] can enlist all capable members of the Apastras in order to fight for the [Root.GovernmentName]. This, of course, comes at the cost of additional privileges for the Apastras."
+ estate_maratha_noble_promotion: "Apastras Noble Promotion"
+ estate_maratha_noble_promotion_desc: "Apastras have members of noble blood themselves. However, in direct competition with the normal [Root.GetNobilityOrFallbackName] the Apastras have the disadvantage. Promoting their position will secure the loyalty of the Apastras."
  ####RAJPUTS PRIVILEGES###
  estate_rajput_development_of_rajput_lands: "Promote Rajasthani Development"
  estate_rajput_development_of_rajput_lands_desc: "The [Root.GetRajputsName] are one of the influential castes within our [Root.GovernmentName]. Promising them the attention and resources of the state will ensure their loyalty towards us."
@@ -5907,7 +5907,7 @@
  national_estate_burghers_bribe: "National Placating of the Burghers"
  national_estate_cossacks_bribe: "National Placating of the Cossacks"
  national_estate_brahmins_bribe: "National Placating of the Brahmins"
- national_estate_maratha_bribe: "National Placating of the Maratha"
+ national_estate_maratha_bribe: "National Placating of the Apastras"
  national_estate_vaisyas_bribe: "National Placating of the Vaishyas"
  national_estate_dhimmi_bribe: "National Placating of the Dhimmi"
  national_estate_jains_bribe: "National Placating of the Jains"
