--- a/localisation/emperor_estates_l_english.yml
+++ b/localisation/emperor_estates_l_english.yml
@@ -63,10 +63,10 @@
  estate_jains_clerical_class: "Jain Clerical Class"
  estate_jains_indebted_to_jains: "Indebted to the Jains"
  estate_jains_conscientious_objection: "Conscientious Objections"
- estate_maratha_military: "Primacy of the Marathas"
- estate_maratha_advisor: "Recruit Maratha Drillmasters"
- estate_maratha_loyalty_privilege: "Increased Maratha Autonomy"
- estate_maratha_special_privilege: "Maratha Military Leadership"
+ estate_maratha_military: "Primacy of the Apastras"
+ estate_maratha_advisor: "Recruit Apastras Drillmasters"
+ estate_maratha_loyalty_privilege: "Increased Apastras Autonomy"
+ estate_maratha_special_privilege: "Apastras Military Leadership"
  estate_rajput_rajput_regiments: "Establish the Rajput Regiments"
  estate_rajput_military: "Primacy of the Rajputs"
  estate_rajput_advisor: "Recruit Rajput Drillmasters"
