loc and region fixes

--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -575,6 +575,7 @@
  mbania: "Mbania"
  geira: "Geira"
  tene: "Tene"
+ koro: "Koro"
 
  almurtafan_group: "Almurtafan"
  sefertian: "Sefertian"
@@ -634,6 +635,7 @@
  
  itoic_group: "Itoic"
  itoan: "Itoan"
+ ngiria: "Ngiria"
 
  madunian_group: "Madunian"
  mejietatean: "Mejietatean"
@@ -642,6 +644,7 @@
  kusan: "Kusan"
  chakkama: "Chakkama"
  dakhaforan: "Dakhaforan"
+ mdarana: "Mdarana"
 
  ramumoni_group: "Ramumoni"
  anayata: "Anayata"
@@ -673,3 +676,36 @@
  kurtian: "Kurtian"
  gizir: "Gizir"
  velypsheni: "Velypsheni"
+
+ vanhu_group: "Vanhu"
+ gungvanhu: "Gungvanhu"
+ mujuri: "Mujuri"
+ fuva: "Fuva"
+ nyereni: "Nyereni"
+ dzikisri: "Dzikisri"
+ sangachika: "Sangachika"
+
+ bongagoyan_group: "Bongagoyan"
+ gqabal: "Gqabal"
+ dunduman: "Dunduman"
+ khindu: "Khindu"
+
+ amhebian_group: "Amhebian"
+ ubigla: "Ubigla"
+ xawa: "Xawa"
+ taxan: "Taxan"
+
+ mpasi_group: "Mpasi"
+ kwakila: "Kwakila"
+ zizi: "Zizi"
+ sumbaka: "Sumbaka"
+ ndundan: "Ndundan"
+ vangalo: "Vangalo"
+
+ inyaji_group: "Inyaji"
+ ituzan: "Ituzan"
+ kubomi: "Kubomi"
+ umuca: "Umuca"
+ gukomere: "Gukomere"
+ omwaka: "Omwaka"
+ ndalawa: "Ndalawa"
