--- a/localisation/TD_superregions_l_english.yml
+++ b/localisation/TD_superregions_l_english.yml
@@ -6,7 +6,7 @@
  northern_basin_superregion: "Northern Basin"
  western_kakigia_superregion: "Zakarturi Steppe"
  visparaya_superregion: "Visparaya"
- northern_sahila_superregion: "Northern Sahila"
+ northern_sahila_superregion: "North Sahila"
  westcoast_superregion: "Westcoast"
  greater_tarhia_superregion: "Greater Tarhia"
  central_steppe_superregion: "Central Steppe"
@@ -18,3 +18,6 @@
  south_pemenia_superregion: "South Pemenia"
  eastern_sahila_superregion: "Kaheta"
  southern_venatia_superregion: "Southern Venatia"
+ west_sahila_superregion: "West Sahila"
+ central_sahila_superregion: "Central Sahila"
+ chinkatia_superregion: "Chinkatia"
