--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -121,3 +121,9 @@
  oleania_region: "Oleania"
  daslevenia_region: "Daslevenia"
  vorrasia_region: "Vorracia"
+ amhebia_region: "Amhebia"
+ sahila_region_5: "Sahila Region 5"
+ lunseka_region: "Lunseka"
+ upper_ngamba_region: "Upper Ngamba"
+ inyaja_region: "Inyaja"
+ mujura_region: "Mujura"
