palmisianism spawn start

--- a/localisation/TD_01_flavour_palmisianism_l_english.yml
+++ b/localisation/TD_01_flavour_palmisianism_l_english.yml
@@ -79,4 +79,6 @@
  palmisian.7.desc: "We decided to share what we know to our brothers, because of that they decided to also help us in scientific progress"
  palmisian.7.a: "Work Together"
  palmisianism_knowledge_cooperative: "Knowledge Cooperative"
+
+ brianoli_palmisian_conspiracy_tt: "We will join Palmisian Reformation when it starts."
  
