--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1756,5 +1756,65 @@
  YOT: "Yotakish"
  YOT_ADJ: "Yotakishi"
 
-
-
+ MUJ: "Mujura"
+ MUJ_ADJ: "Mujuri"
+ PRM: "Paramhara"
+ PRM_ADJ: "Paramharan"
+ MNZ: "Munzwaneem"
+ MNZ_ADJ: "Munzwaneemi"
+ MKA: "Mkabwa"
+ MKA_ADJ: "Mkabwan"
+ KAD: "Kadhe"
+ KAD_ADJ: "Kadhean"
+ NYE: "Nyere"
+ NYE_ADJ: "Nyereni"
+ CHI: "Chikomo"
+ CHI_ADJ: "Chikoman"
+ RUF: "Rufadi"
+ RUF_ADJ: "Rufadi"
+ MHP: "Mahpfoko"
+ MHP_ADJ: "Mahpfokan"
+ DND: "Dundumi"
+ DND_ADJ: "Dunduman"
+ KHU: "Khumbala"
+ KHU_ADJ: "Khumbalan"
+ NYZ: "Nyazali"
+ NYZ_ADJ: "Nyazali"
+ UMU: "Umuji"
+ UMU_ADJ: "Umuji"
+ KRR: "Kurarama"
+ KRR_ADJ: "Kurarami"
+ KUN: "Kurunda"
+ KUN_ADJ: "Kurundan"
+ UBU: "Ubusa"
+ UBU_ADJ: "Ubusan"
+ TNU: "Tanu"
+ TNU_ADJ: "Tanu"
+ GUK: "Gukara"
+ GUK_ADJ: "Gukaran"
+ TOT: "Totawon"
+ TOT_ADJ: "Totawoni"
+ NSI: "Nsila"
+ NSI_ADJ: "Nsilan"
+ SIM: "Simka"
+ SIM_ADJ: "Simkan"
+ NTB: "Ntabi"
+ NTB_ADJ: "Ntabi"
+ EZU: "Ezunki"
+ EZU_ADJ: "Ezunkan"
+ MWE: "Mweba"
+ MWE_ADJ: "Mweban"
+ SNG: "Singayo"
+ SNG_ADJ: "Singayan"
+ ESA: "Esala"
+ ESA_ADJ: "Esalan"
+ NLO: "Nlondi"
+ NLO_ADJ: "Nlondian"
+ SNT: "Sente"
+ SNT_ADJ: "Sentean"
+ EKM: "Ekama"
+ EKM_ADJ: "Ekaman"
+ SON: "Songala"
+ SON_ADJ: "Songalan"
+ DOM: "Dombara"
+ DOM_ADJ: "Dombaran"
