New Monuments (and minor tweaks)

--- a/localisation/TD_great_projects_l_english.yml
+++ b/localisation/TD_great_projects_l_english.yml
@@ -4,7 +4,7 @@
  province_is_or_accepts_anhativaz_tt: "The Religion of §Y[Root.GetName]§! is §YAnhativaz§! and is either the State or the Syncretic Religion of the owner."
  province_is_or_accepts_ilumist_tt: "The Religion of §Y[Root.GetName]§! is §YIlumist§! and is either the State or the Syncretic Religion of the owner."
  province_is_or_accepts_uttarian_tt: "The Religion of §Y[Root.GetName]§! is §YUttarian§! and is either the State or the Syncretic Religion of the owner."
- province_is_or_accepts_eopedian_tt: "The Religion of §Y[Root.GetName]§! is §YRahEopedianand is either the State or the Syncretic Religion of the owner."
+ province_is_or_accepts_eopedian_tt: "The Religion of §Y[Root.GetName]§! is §YEopedian is either the State or the Syncretic Religion of the owner."
  province_is_or_accepts_kausali_tt: "The Religion of §Y[Root.GetName]§! is §YKausali§! and is either the State or the Syncretic Religion of the owner."
  province_is_or_accepts_nahitar_tt: "The Religion of §Y[Root.GetName]§! is §YNahitar§! and is either the State or the Syncretic Religion of the owner."
  province_is_or_accepts_sointuva_tt: "The Religion of §Y[Root.GetName]§! is §YSointuva§! and is either the State or the Syncretic Religion of the owner."
@@ -12,6 +12,8 @@
  province_is_or_accepts_lummak_mythologyi_tt: "The Religion of §Y[Root.GetName]§! is §YLummak Mythology§! and is either the State or the Syncretic Religion of the owner."
  province_is_or_accepts_hengtuan_tt: "The Religion of §Y[Root.GetName]§! is §YHengtuan§! and is either the State or the Syncretic Religion of the owner."
  province_is_or_accepts_merhaan_tt: "The Religion of §Y[Root.GetName]§! is §YMerhaan§! and is either the State or the Syncretic Religion of the owner."
+ province_is_or_accepts_desjaniti_tt: "The Religion of §Y[Root.GetName]§! is §YDesjaniti§! and is either the State or the Syncretic Religion of the owner."
+ province_is_or_accepts_nallavul_tt: "The Religion of §Y[Root.GetName]§! is §YNallavul§! and is either the State or the Syncretic Religion of the owner."
 
  matliman_canal: "Matliman Canal"
  decision_matliman_canal_title: "Matliman Land Preparation"
@@ -138,3 +140,30 @@
 
  castelo_ferran: "Castelo Ferran"
  castelo_ferran_desc: "In order to protect the trade routes coming from the inland of the Narbona and protect the city of Paraconna from heathens, a castle was build near the river, taking the name of one of the relatives of the local duke."
+ 
+ vanapiir_iron_mine: "Vanapiir Iron Mine"
+ vanapiir_iron_mine_desc: "Biggest Iron Mine in Kakigia, most of Kakigian weapons are made with iron from this mining complex."
+ 
+ zlatodvor_cloth_hall: "Zlatodvor Cloth Hall"
+ zlatodvor_cloth_hall_desc: "Zlatodvor Cloth Hall is trading hub where the famous Zlatodvor's Golden Cloth is sold, and is the only place where this cloth can be bought."
+ 
+ stegorod_stables: "Grand Stegorod Stables"
+ stegorod_stables_desc: "With ever Expanding Velypsheni need for horses, and expansion of Stegorod, it was designated to build the grandest stables in all of Kakigia in Stegorod."
+ 
+ akhalivan_palace: "Akhalivan Palace"
+ akhalivan_palace_desc: "Akhalivan Palace is an old imperial complex build in times of last Zakarturi Empire."
+ 
+ bhamata_great_forts: "Bhamata Great Forts"
+ bhamata_great_forts_desc: "Biggest fortification complex build by Apastri, known for centuries for being impossible to conquer."
+ 
+ great_bokglon_canals: "Great Bokglon Canals"
+ great_bokglon_canals_desc: "A Series of canals on Bokglon estuary, made by local queendom to utilize the fertile soil more efficiently."
+ 
+ holy_temple_of_gsambya: "Holy Temple of Gsambya"
+ holy_temple_of_gsambya_desc: "The residence of Sarvoccapakapujari, and the holiest place for anyone in the Desjaniti faith, many faithful pilgrimage to this temple every year."
+ 
+ perimutaman: "Perimutaman"
+ perimutaman_desc: "Perimutaman is an old palace build by the local nobility when they still were present in Perimutam, now repurposed for public use of the people by the Priesthood."
+ 
+ parhali_fortress: "Parhali Fortress"
+ parhali_fortress_desc: "Infamous pirate fortress, being built by Apastri that went south to become a pirate, known in the region for the fact that it has never fallen into enemy's hands."
