--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -581,4 +581,14 @@
  midnima_rebels_demand: "Convert $COUNTRYNAME$"
  hayasi: "Hayasi"
  
+
+ tateguru_worship: "Tateguru"
+ tateguru_worship_religion_desc: ""
+ tateguru_worship_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ tateguru_worship_rebels_title: "Religious"
+ tateguru_worship_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ tateguru_worships_rebels_army: "$RELIGION$ Army"
+ tateguru_worship_rebels_demand: "Convert $COUNTRYNAME$"
+ hayasi: "Hayasi"
+ 
  
