Apastri Minor Ideas

--- a/localisation/TD_01_flavour_samadia_l_english.yml
+++ b/localisation/TD_01_flavour_samadia_l_english.yml
@@ -88,6 +88,23 @@
  paraderavi_new_methods_of_warfare: "New Methods of Warfare"
  paraderavi_new_methods_of_warfare_desc: "Nomadic raids of the eleventh and twelveth century have led to increased need of finding a way to effectively combat these horsemen. This is when Danase pikemen were finally given the chance to shine. In the following years, their formations became the default way of fighting in the empire, and consequently in the rest of Samadia. With the advancements of the gunpowder technology in seventeenth century, they were made even stronger, being able to not only perfectly defend, but also systematically attack."
  
+ apastra_group_ideas: "Apastri Minor Ideas"
+ apastra_group_ideas_bonus: "Apastri Minor Ambition"
+ apastra_group_ideas_start: "Apastri Minor Traditions"
+ apastra_dry_irigation_methods: "Dry Irigation Methods"
+ apastra_dry_irigation_methods_desc: "Due to high dryness of the land in our homeland of Apastradesa, we had to improve and advance our irigation methods to be able to survive in this harsh environment."
+ apastra_rajaraksaka: "Rajaraksaka"
+ apastra_rajaraksaka_desc: "Rajaraksaka (Royal Guard in English) is an elite force in every Apastras-respecting country, Recruited from free Apastras, utilized mainly to protect fortifications, and can be semi-rarely seen in common Apastri armies."
+ apastra_bhajsaya_teachings: "Bhajsaya Teachings"
+ apastra_bhajsaya_teachings_desc: "Bhajsaya way of life teaches us that gods favour the wise and may give them various gifts, so we should improve our universities and teach the basic knowledge."
+ apastra_trade_across_the_mountains: "Trade Across the Nadivi Mountains"
+ apastra_trade_across_the_mountains_desc: "Nadivi mountains, although small, are natural border of Apastradesa in the middle of Rygkun region, and are the only known mountain passes between Tsetsag, far-away Hengtua, and the western Samadia. We happen to control this critical passes, and we can utilize that to improve our trading position."
+ apastra_improved_fortification_design: "Improved Fortification Design"
+ apastra_improved_fortification_design_desc: "After years of experimenting and gaining experience, Apastras have improved the designs of our fortifications, reducing the cost of their maintenance in the process."
+ apastra_land_of_dyes_and_silk: "Land of Dyes and Silk"
+ apastra_land_of_dyes_and_silk_desc: "Apastradesa is known in the west as `Land of Dyes and Silk`, and we can utilize this for the sake of our renown and glory, and to appease the Apastras that manufacture all these goods."
+ apastra_engineering_mastery: "Apastras Engineering Mastery"
+ apastra_engineering_mastery_desc: "Apastras have reached a mastery in defensive Engineering over the years, and their expertise is invaluable to our state, it's prosperity, and continued survival."
  
  apagtaru_kingdom_reform: "Apagtaru Kingdom"
  apagtaru_kingdom_reform_desc: "Apagtaru Kingdom is most prestigious governing body in Apagtaru lands, and it commands all of the Apagtaru people in the will of Gods. It is heavily anti-burghers due to it's long history."
