--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -589,6 +589,14 @@
  tateguru_worship_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
  tateguru_worships_rebels_army: "$RELIGION$ Army"
  tateguru_worship_rebels_demand: "Convert $COUNTRYNAME$"
- hayasi: "Hayasi"
+ itsiva: "Hayasi"
+ 
+ soresa: "Soresa"
+ soresa_religion_desc: ""
+ soresa_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ soresa_rebels_title: "Religious"
+ soresa_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ soresas_rebels_army: "$RELIGION$ Army"
+ soresa_rebels_demand: "Convert $COUNTRYNAME$"
  
  
