--- a/localisation/TD_01_flavour_palmisianism_l_english.yml
+++ b/localisation/TD_01_flavour_palmisianism_l_english.yml
@@ -81,4 +81,18 @@
  palmisianism_knowledge_cooperative: "Knowledge Cooperative"
 
  brianoli_palmisian_conspiracy_tt: "We will join Palmisian Reformation when it starts."
+
+ palmisian.1001.t: "Secret Proposition"
+ palmisian.1001.desc: "Radical palmisianist elements from the council started to feel disillusioned with the direction that liemarianist movement is taking. Because of that they started a conspiracy where they will seperate from the liemarianism and start their own branch of reformation. Fascinated with our treatment of common man and anti royal sentiment they decided to sent as a proposition to join to their conspiracy. We can decline them or decide to help them out, changing our state religion when the moment strikes."
+ palmisian.1001.a: "We accept"
+ palmisian.1001.b: "Get them out"
+
+ palmisian.1002.t: "Palmisianist Heresy"
+ palmisian.1002.desc: "Palmisianists all over the Mysentria started to go against liemarian doctrines as their protest against hypocrisy of the Episcopate. They claim that no one can truly claim to be representative of God and this title can only be attributed to Saelius. Formation of local chapter organization with quest of converting local masses will shake continent further more."
+ palmisian.1002.a: "Worrying Development"
+
+ palmisian.1003.t: "Chapter of Sal"
+ palmisian.1003.desc: "With divergence in Palmisianist doctrine, local formed chapter is trying to convince us to fully adopt their doctrines. Doing so will ensure their support in many manners, but we will cut our ties with liemarian church."
+ palmisian.1003.a: "No Prophets, Only Sal"
+ palmisian.1003.a: "We can't Abandon our Brothers"
  
